# cppPhoneDirectory

./: CMakeLists.txt  colors.hpp  database.txt  main.cpp  user.hpp  vcpkg.json
application/: application-user-service.hpp  dto-assembler.hpp
application/product/: application-product-service.hpp  dto-assembler.hpp
application/user/: application-user-service.hpp  dto-assembler.hpp
domain/: user-factory.hpp  user-repository.hpp  user-service.hpp  user.hpp
domain/product/: product-factory.hpp  product-repository.hpp  product-service.hpp  product.hpp
domain/user/: user-factory.hpp  user-repository.hpp  user-service.hpp  user.hpp
libcpp-http-client/: README.md
